fixed animation on safari

--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ p {
 }
 
 .linkbar-icon {
-  font-size: clamp(26px, 2vw, 32px);
+  font-size: clamp(20px, 2.5vw, 32px);
   color: #212529;
   background-color: rgba(0, 0, 0, 0);
   transition: color .3s;
@@ -104,7 +104,7 @@ p {
   width: 100vw;
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -124,42 +124,48 @@ p {
 
 @keyframes gradient-color-fade-in {
   from {
-    --start: rgba(0, 0, 0, 0);
-    --end: rgba(0, 0, 0, 0);
+    background: -webkit-linear-gradient(330deg,rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+    background-clip: text;
+    -webkit-background-clip: text;
   }
 
   to {
-    --start: #7E3FF2;
-    --end: #f23fb3;
+    background: -webkit-linear-gradient(330deg, #7E3FF2, #f23fb3);
+    background-clip: text;
+    -webkit-background-clip: text;
   }
 }
 
 @keyframes gradient-color-fade-out {
   from {
-    --start: #7E3FF2;
-    --end: #f23fb3;
+    background: -webkit-linear-gradient(330deg, #7E3FF2, #f23fb3);
+    background-clip: text;
+    -webkit-background-clip: text;
   }
 
   to {
-    --start: rgba(0, 0, 0, 0);
-    --end: rgba(0, 0, 0, 0);
+    background: -webkit-linear-gradient(330deg,rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+    background-clip: text;
+    -webkit-background-clip: text;
   }
 }
 
 .gradient-hover {
   color: #212529;
   transition: color .3s;
-  animation: gradient-color-fade-out .6s;
-
-  background: -webkit-linear-gradient(330deg, var(--start), var(--end));
-  background-clip: text;
-  -webkit-background-clip: text;
+  animation-name: gradient-color-fade-out;
+  animation-duration: .3s;
+  animation-timing-function: step-end;
+  animation-fill-mode: forwards;
 }
 
 .gradient-hover:hover {
   color: rgba(0, 0, 0, 0);
   cursor: pointer;
-  animation: gradient-color-fade-in;
+  animation-name: gradient-color-fade-in;
+  animation-delay: 0ms;
+  animation-duration: 0ms;
+  animation-timing-function: step-start;
   animation-fill-mode: forwards;
 }
 
